hphp/test/quick/unset_protected_prop.php.expectf
PHP Fatal error:  Cannot access protected property F::$foo in %s on line 9
